--- a/index.html
+++ b/index.html
@@ -7,8 +7,49 @@
     <title>LEGODudes Webshop</title>
 </head>
 <body>
-    
-    <p id="test"></p>
+    <div id="container">
+        <header>
+            <img id="logo" src="course/LEGOdudes_webshop/website_images/LD_logo.svg" alt="Lego logo">
+            <button>
+                <span>99</span>
+                <img id="carticon" src="course/LEGOdudes_webshop/website_images/legocart.svg" alt="Lego cart">
+            </button>
+            <section id="cart">
+                <h2>Din handlevogn</h2>
+                <ul>
+                    <li>
+                        <span class="title">Produkttittel</span>
+                        <span class="price">89,-</span>
+                        <span class="quantity">x1</span>
+                        <span class="function">
+                            <button>X</button>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="title">Wengestone Warrior</span>
+                        <span class="price">9899,-</span>
+                        <span class="quantity">x333</span>
+                        <span class="function">
+                            <button>X</button>
+                        </span>
+                    </li>
+                </ul>
+            </section>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="#">City</a></li>
+                <li><a href="#">Ninjago</a></li>
+                <li><a href="#">Castles and kngihts</a></li>
+                <li><a href="#">Marines and pirates</a></li>
+                <li><a href="#">Movie Characters</a></li>
+            </ul>
+        </nav>
+        <main>
+                  
+        </main>
+    </div>
+    <script src="legodudes.js"></script>
     <script src="js/shopscript.js"></script>
 </body>
 </html>
